trunk/polyglot/src/generics/testing/forwardref1.jl5
class A<T extends S, S> {} //error

class B<T, S extends T> {} //fine

class C<T extends C<T>> {} //fine

class D<T extends D<S,S>, S extends T> {} //fine

class E<T extends T> {} //error

class F<T extends D<S,S>, S> {} //error S is D<S,S> is not bounded by T
